@@ -9,8 +9,10 @@ libdebian-installer (0.22.unreleased) UNRELEASED; urgency=low
     - Remove two undocumented symbols.
     - Use debhelper udeb support.
     - Add environment support to execution helpers.
+    - The size of a hash map is the number of elements, not the size of the
+      array.
 
- -- Bastian Blank <waldi@debian.org>  Sun, 25 Apr 2004 11:34:31 +0200
+ -- Bastian Blank <waldi@debian.org>  Fri, 07 May 2004 22:43:52 +0200
 
 libdebian-installer (0.22) unstable; urgency=low
 
